[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Icons/Remove.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/Add.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/Close.svg" type="Texture" id=3]
[ext_resource path="res://Scripts/CommentRect.gd" type="Script" id=4]

[node name="CommentRect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1180.0
margin_bottom = -687.0
color = Color( 0.333333, 0.333333, 0.333333, 0.564706 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 167.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 151.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TitleBar"]
margin_right = 119.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "This is a multiline
commentary."
autowrap = true

[node name="CloseButton" type="Button" parent="VBoxContainer/TitleBar"]
margin_left = 123.0
margin_right = 151.0
margin_bottom = 31.0
icon = ExtResource( 3 )
flat = true
align = 2
icon_align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 151.0
margin_bottom = 57.0
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true

[node name="SubButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 22.0
icon = ExtResource( 1 )
flat = true

[connection signal="pressed" from="VBoxContainer/TitleBar/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SubButton" to="." method="_on_SubButton_pressed"]
